[gd_scene load_steps=15 format=3 uid="uid://d3advjbj1qvd"]

[ext_resource type="Script" path="res://scripts/whip_dwarf/whip_dwarf.gd" id="1_a5psn"]
[ext_resource type="Texture2D" uid="uid://dffnwy2kwhwh4" path="res://icon.svg" id="2_ldy0a"]
[ext_resource type="FontFile" uid="uid://cpxc3ih7dbm0w" path="res://font/minimal5x7.ttf" id="3_njebh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8336"]
size = Vector2(24, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f88u0"]
size = Vector2(24, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ku6yd"]
size = Vector2(24, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h371u"]
size = Vector2(24, 48)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_4wx4o"]
a = Vector2(10, 0)
b = Vector2(-10, 0)

[sub_resource type="Animation" id="Animation_5kka7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(48, 24)]
}

[sub_resource type="Animation" id="Animation_qfjjv"]
resource_name = "event"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(48, 24), Vector2(48, 228)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h1ver"]
_data = {
"RESET": SubResource("Animation_5kka7"),
"event": SubResource("Animation_qfjjv")
}

[sub_resource type="Animation" id="Animation_r6ien"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vyonw"]
resource_name = "event"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5qddx"]
_data = {
"RESET": SubResource("Animation_r6ien"),
"event": SubResource("Animation_vyonw")
}

[node name="Whip_dwarf" type="Node"]
script = ExtResource("1_a5psn")

[node name="base" type="ColorRect" parent="."]
offset_left = 40.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 240.0
color = Color(0, 0, 0, 1)

[node name="Area1" type="Area2D" parent="."]

[node name="sprite" type="ColorRect" parent="Area1"]
offset_left = 48.0
offset_top = 120.0
offset_right = 72.0
offset_bottom = 136.0
color = Color(0.988235, 0, 0, 1)

[node name="shape" type="CollisionShape2D" parent="Area1"]
z_index = 1
position = Vector2(60, 128)
shape = SubResource("RectangleShape2D_l8336")

[node name="Area2" type="Area2D" parent="."]

[node name="sprite" type="ColorRect" parent="Area2"]
offset_left = 48.0
offset_top = 136.0
offset_right = 72.0
offset_bottom = 184.0
color = Color(0.945098, 0.894118, 0, 1)

[node name="sprite2" type="ColorRect" parent="Area2"]
offset_left = 48.0
offset_top = 72.0
offset_right = 72.0
offset_bottom = 120.0
color = Color(0.945098, 0.894118, 0, 1)

[node name="shape" type="CollisionShape2D" parent="Area2"]
z_index = 1
position = Vector2(60, 160)
shape = SubResource("RectangleShape2D_f88u0")

[node name="shape2" type="CollisionShape2D" parent="Area2"]
z_index = 1
position = Vector2(60, 96)
shape = SubResource("RectangleShape2D_ku6yd")

[node name="Area3" type="Area2D" parent="."]
position = Vector2(1, 0)

[node name="sprite" type="ColorRect" parent="Area3"]
offset_left = 47.0
offset_top = 24.0
offset_right = 71.0
offset_bottom = 72.0
color = Color(0, 0.992157, 0.992157, 1)

[node name="sprite2" type="ColorRect" parent="Area3"]
offset_left = 47.0
offset_top = 184.0
offset_right = 71.0
offset_bottom = 232.0
color = Color(0, 0.992157, 0.992157, 1)

[node name="shape" type="CollisionShape2D" parent="Area3"]
z_index = 1
position = Vector2(59, 48)
shape = SubResource("RectangleShape2D_h371u")

[node name="shape2" type="CollisionShape2D" parent="Area3"]
z_index = 1
position = Vector2(59, 208)
shape = SubResource("RectangleShape2D_h371u")

[node name="bar" type="Area2D" parent="."]
position = Vector2(48, 24)

[node name="sprite" type="ColorRect" parent="bar"]
offset_right = 24.0
offset_bottom = 4.0

[node name="shape" type="CollisionShape2D" parent="bar"]
z_index = 1
position = Vector2(12, 2)
shape = SubResource("SegmentShape2D_4wx4o")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="bar_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h1ver")
}

[node name="pause_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="whip_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5qddx")
}

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(320, 128)
texture = ExtResource("2_ldy0a")

[node name="points" type="Label" parent="."]
offset_left = 368.0
offset_top = 8.0
offset_right = 473.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("3_njebh")
theme_override_font_sizes/font_size = 24
text = "Points : XX"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Area1" to="." method="_on_area_1_area_entered"]
[connection signal="area_exited" from="Area1" to="." method="_on_area_1_area_exited"]
[connection signal="area_entered" from="Area2" to="." method="_on_area_2_area_entered"]
[connection signal="area_entered" from="Area3" to="." method="_on_area_3_area_entered"]
[connection signal="timeout" from="pause_timer" to="." method="_on_pause_time_timeout"]
